# Twitter-Raiding-System

./: .env  .env.sample  .gitignore  Cargo.toml  README.md
.sqlx/: query-28e15d35d63150c12053893efce1c628eede39a1beabeb1d909100fdb018d431.json  query-3af34b194a888a80d72edb8ff344fa59a9c0de4102aabf7a5f2bea83485ef2c3.json  query-3c3a08ae7d729f8db370111029c8887d9487e123db00469220dd51ca6ab052d1.json  query-4ffc415b33da523f57e45493b6ade930df1faf9089ed084a074d8002692fd497.json  query-64f956d3e3756d6632535a14c82091144f5f9a7c13755079c1346361e8a8c455.json  query-833d11554ab15bafbb8c63e947f3b92ee6b555a767dee009cd9af7d970737762.json  query-933fffbe428ca2e30691b934dd4c686c341e30715e4cad732ed77f22425a7612.json  query-a745874d223e204bbfcf871e5e280c81ebd520dcc967e093469eb939e637ea65.json  query-dbfe3b0265df364b34af0c7d4c1790ad15c3c144f4cc57c2ec6d30016cf89cf7.json
src/: config.rs  env.rs  lib.rs  main.rs  server.rs
src/controllers/: mod.rs
src/controllers/handlers/: hey.rs  mod.rs  raids.rs
src/core/: db.rs  mod.rs
src/core/beta_users/: queries.rs
src/core/discord/: apis.rs  bot.rs  mod.rs
src/core/points_calc/: calc.rs
src/core/staking_raids/: queries.rs  raids.rs
src/core/staking_raids_user/: queries.rs
src/core/users/: beta_users.rs  mod.rs
src/core/xapis/: following_users.rs  get_retweeted_users.rs  liking_users.rs  mod.rs  quote_users.rs  replying_users.rs  retweeted_users.rs
